--- a/src/app/input-currency/input-currency.component.html
+++ b/src/app/input-currency/input-currency.component.html
@@ -1,5 +1,5 @@
 <div class="currency">
-    <span class="currency-code">{{codeCurrency}}</span>
-    <input type="number">
-    <div class="currency-type">{{typeCurrency}}</div>
+    <span class="currency-code">{{currency.codeCurrency}}</span>
+    <input type="text" value="{{currency.value}}">
+    <div class="currency-type">{{currency.typeCurrency}}</div>
 </div>
