--- a/src/app/input-currency/input-currency.component.scss
+++ b/src/app/input-currency/input-currency.component.scss
@@ -1,10 +1,22 @@
 .currency {
-    margin-bottom: 1rem;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    width: 90%;
+    border-radius: 0.3rem;
+    color: rgb(40, 96, 160);
+
+    input{
+    width: 85%;
+    }
+    
     .currency-code {
         margin: 5px;
     }
-    
+
     .currency-type {
+        font-size: 12px;
+        color: rgb(102, 102, 102);
+        font-weight: 400;
         text-align: right;
     } 
 }
